# trfilter

./: Cargo.toml  LICENSE  README.md
src/: cli.rs  core.rs  errors.rs  filter.rs  lib.rs  main.rs
src/ext/: cli.rs
src/filter/: checker.rs  common.rs  globber.rs  mod.rs  rule.rs  scanner.rs
