[package]
name = "trfilter"
version = "0.1.0"
authors = ["Balakrishnan Chandrasekaran"]
edition = "2018"
# homepage = ""
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
colour = "0.5.0"
globset = "0.4.6"
lazy_static = "1.4.0"
regex = "1.1.9"
walkdir = "2"

[build-dependencies]
built = "0.4.4"
